<package>
  <name>pointcloud2_filters_erdc</name>
  <description>
    Assorted filters designed to operate on pointcloud2 topics.
  </description>
  <version>1.9.0</version>
  <maintainer email="charles.c.ellison@erdc.dren.mil">Charles Ellison</maintainer>
  <author>Charles Ellison</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>nodelet</build_depend>

  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <build_depend>cv_bridge</build_depend>

  <build_depend>filter_chains_erdc</build_depend>

  <run_depend>rclcpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>angles</run_depend>

  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>

  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <run_depend>cv_bridge</run_depend>

  <run_depend>filter_chains_erdc</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
